objects/Group_Services__c.object
<CustomObject>
    <fields>
        <fullName>AIM_RQI_Indicator_Change_Required__c</fullName>
        <label>AIM RQI Indicator Change Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Demo__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name_Display_Text__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Legal_Name__r.Name</formula>
        <label>Account Legal Name Display Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Set_Up_Form_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Set Up Form Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_ID_Counts__c</fullName>
        <label>Actual ID Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Benefit_Information_Received__c</fullName>
        <label>All Benefit Information Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_Audits_Applicable__c</fullName>
        <label>Is Group Services Audit Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Implementer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Implementer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Audit Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Audit_Submit_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Audit Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BEGID_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BEGID Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Production_Load_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Production Load Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Test_Load_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Test Load Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brief_Description_Of_Production_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brief Description Of Production Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brief_Description_Of_Test_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brief Description Of Test Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CDHP_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CDHP Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CHDP_Vendor_Screen_Complete_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CHDP Vendor Screen Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COBRA_Client_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COBRA Client ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COBRA_IT_Work_Request_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COBRA IT Work Request Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COBRA_Manual_Population__c</fullName>
        <label>COBRA Manual Population</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COBRA_Production_File_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COBRA Production File Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COBRA_Test_File_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COBRA Test File Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Regarding_Changes_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments Regarding Changes To Production</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Regarding_Changes_To_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments Regarding Changes To Test</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Code_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Code(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_1st_COBRA_Production_File_Expected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 1st COBRA Production File Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_1st_COBRA_Production_File_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 1st COBRA Production File Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_1st_COBRA_Production_File_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 1st COBRA Production File Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_1st_Production_File_Is_Expected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 1st Production File Is Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_1st_Production_File_Was_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 1st Production File Was Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_1st_Production_File_Was_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 1st Production File Was Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_COBRA_Production_File_Expected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 2nd COBRA Production File Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_COBRA_Production_File_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 2nd COBRA Production File Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_COBRA_Production_File_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 2nd COBRA Production File Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_Production_File_Is_Expected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 2nd Production File Is Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_Production_File_Was_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 2nd Production File Was Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_Production_File_Was_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 2nd Production File Was Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_AIM_RQI_UM_Indicator_Changed_To_Q__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date AIM RQI/UM Indicator Changed To Q</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_AIM_Vendor_Screen_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date AIM Vendor Screen Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ALG_Vendor_Screen_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ALG Vendor Screen Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ASHN_HMO_Chiro_Vendor_Screen_Comp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ASHN–HMO Chiro Vendor Screen Comp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved_Structure_Sent_To_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Approved Structure Sent To Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Audit_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Audit Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_BDS_Vendor_Screen_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date BDS Vendor Screen Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_BEGID_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date BEGID Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Benefit_Information_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Benefit Information Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Benefits_Loaded_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Benefits Loaded To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Benefits_Loaded_To_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Benefits Loaded To Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Bill_Dropped_Post_Eligibility_Load__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Bill Dropped -Post Eligibility Load</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Bill_Dropped_Pre_Eligibility_Load__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Bill Dropped - Pre Eligibility Load</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COBRA_Mapping_Went_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date COBRA Mapping Went To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COBRA_SAR_Doc_View_Setup_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date COBRA SAR/Doc View Setup Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COBRA_Split_Table_Setup_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date COBRA Split Table Setup Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COBRA_Tape_Mapping_Submitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date COBRA Tape Mapping Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COBRA_Test_File_Is_Expected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date COBRA Test File Is Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COBRA_Test_File_Was_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date COBRA Test File Was Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COBRA_Test_Matrix_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date COBRA Test Matrix Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COBRA_Testing_Was_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date COBRA Testing Was Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_CONEXIS_Cal_COBRA_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date CONEXIS-Cal COBRA Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Case_Group_Note_Added__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Case/Group Note Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Changes_Moved_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Changes Moved To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Compare_Report_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Compare Report Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Compare_Report_Returned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Compare Report Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completion_Email_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Completion Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_EDMEDLTR_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date EDMEDLTR Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_EPID_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date EPID Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Eligibility_Accepted_At_LITES__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Eligibility Accepted At LITES</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Eligibility_Confirmed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Eligibility Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_FSA_Shared_Rate_Amount_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date FSA Shared Rate Amount Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_GA_FI_Dental_Screen_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date GA FI Dental Screen Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_GA_FI_Vision_Screen_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date GA FI Vision Screen Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_GenC_Spreadsheet_Updated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date GenC Spreadsheet Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_GenC_Test_Subs_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date GenC Test Subs Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_GenC_Test_Subs_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date GenC Test Subs Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Group_Change_Made_In_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Group Change Made In Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Group_Change_Made_In_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Group Change Made In Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HDRT424K_CSR_Moved_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date HDRT424K CSR Moved To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HDRTMA4K_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date HDRTMA4K Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HDRTMA7K_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date HDRTMA7K Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HDTT260K_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date HDTT260K Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HDTT265K_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date HDTT265K Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HDTT500K_CSR_Moved_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date HDTT500K CSR Moved To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HDTT520K_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date HDTT520K Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HDZTSVGK_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date HDZTSVGK Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HPCC_Loaded_to_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date HPCC Loaded to Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HSA_Addendum_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date HSA Addendum Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HSA_BEG_Form_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date HSA BEG Form Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Card_Ordered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ID Card Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Card_Requirements_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ID Card Requirements Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Card_Requirements_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required When Custom ID Cards Are Selected - WGS Only</inlineHelpText>
        <label>Date ID Card Requirements Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Card_Requirements_Sent_To_IC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ID Card Requirements Sent To IC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Card_Suppression_Removed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ID Card Suppression Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Cards_Paperwork_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ID Cards Paperwork Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Cards_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ID Cards Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Cards_Suppressed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ID Cards Suppressed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_IHM_Email_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date IHM Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_LabCorp_HMO_Vendor_Screen_Comp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date LabCorp–HMO Vendor Screen Comp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Lason_Document_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Lason Document Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mapping_Went_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Mapping Went To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Membership_Meeting_Held__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Membership Meeting Held</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Migration_Manual_Spreadsheet_Rcvd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Migration Manual Spreadsheet Rcvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Migration_Spreadsheet_Sent_To_AM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Migration Spreadsheet Sent To AM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mockup_Audit_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Mockup Audit Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mockup_Audit_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Mockup Audit Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mockups_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required When Custom ID Cards Are Selected - WGS Only</inlineHelpText>
        <label>Date Mockups Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mockups_Created__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required When Custom ID Cards Are Selected - WGS Only</inlineHelpText>
        <label>Date Mockups Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mockups_Loaded_To_SharePoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Mockups Loaded To SharePoint</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_NCN_Removal_Notification_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date NCN Removal Notification Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_NCN_Set_Up_Template_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date NCN Set Up Template Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_New_Group_Values_Mapped_to_Spdsheet__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date New Group Values Mapped to Spdsheet</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_New_Sec_Sent_To_Repository_Mailbox__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date New Sec Sent To Repository Mailbox</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_First_Mailing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of First Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_ID_BA_Prod_Audit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of ID BA Prod Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Imp_Sales_RA_Prod_Audit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required When Custom ID Cards Are Selected - WGS Only</inlineHelpText>
        <label>Date Of Imp/Sales/RA Prod Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Last_Mailing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of Last Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PEX_Indicator_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date PEX Indicator Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PEX_SYSLINK_Email_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date PEX SYSLINK Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PEX_SYSLINK_Entries_Confirmed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date PEX SYSLINK Entries Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PSI_Hold_Removed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date PSI Hold Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Pharmacy_Crosswalk_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Pharmacy Crosswalk Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Prod_Samples_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required When Custom ID Cards Are Selected - WGS Only</inlineHelpText>
        <label>Date Prod Samples Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Production_HPCC_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Production HPCC Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rates_Loaded_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Rates Loaded To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rates_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Rates Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Repository_Form_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Repository Form Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Repository_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Repository Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Request_Received_For_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Request Received For Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Route_Code_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Route Code Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rx_Vendor_Screen_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Rx Vendor Screen Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SAR_Doc_View_Setup_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SAR / Doc View Setup Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SEL_MEMBER_PLNCOD_EXCEL_Comp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SEL.MEMBER.PLNCOD.EXCEL Comp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SEL_NTS_EDPDD409_ACCOUNT_LIST_Comp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SEL.NTS.EDPDD409.ACCOUNT.LIST Comp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SEL_NTS_EYEMED_TABLE_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SEL.NTS.EYEMED.TABLE Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SEL_NTS_NASCORPT_CBCA_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SEL.NTS.NASCORPT.CBCA Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SEL_NTS_NASCORTP_LUMENOS_Comp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SEL.NTS.NASCORTP.LUMENOS Comp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SEL_NTS_VISION_EFFTABL_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SEL.NTS.VISION.EFFTABL Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SEL_NTS_WDS_LOB_TABLE_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SEL.NTS.WDS.LOB.TABLE Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SMR_or_B_Roster_Pulled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SMR or B Roster Pulled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sample_ID_Cards_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Sample ID Cards Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sample_ID_Cards_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Sample ID Cards Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Split_Table_Setup_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Split Table Setup Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Suppressed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Suppressed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Suppression_Removed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Suppression Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_TIN_Added_To_TSO_Table__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date TIN Added To TSO Table</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Tape_Mapping_Submitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Tape Mapping Submitted</label>
        <type>Date</type>
    </fields>
</CustomObject>